--- a/startbootstrap-heroic-features-gh-pages/index.html
+++ b/startbootstrap-heroic-features-gh-pages/index.html
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="www.stratfordpark.org">
                     <img alt="Stratford Park" src="images/brand-logo.png">
                 </a>
             </div>
@@ -49,14 +49,17 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">About</a>
+                        <a href="#">News &amp Announcements</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#">Community Resources</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="#">Upcoming Events</a>
                     </li>
+                    <li>
+                        <a href="#">Stay In Touch</a>
+                    </li>                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -68,10 +71,10 @@
     <div class="container">
 
         <!-- Jumbotron Header -->
-        <header class="jumbotron hero-spacer">
-            <h1>A Warm Welcome!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
-            <p><a class="btn btn-primary btn-large">Call to action!</a>
+        <header class="jumbotron hero-spacer text-center">
+            <h1>Villages of Stratford Park</h1>
+            <p>Click below to be added to our mailing list for community announcements and monthly newsletter.</p>
+            <p><a class="btn btn-default btn-large">Join!</a>
             </p>
         </header>
 
@@ -92,10 +95,11 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>News &amp Announcements</h3>
+                        <p>Stay up to date with the latest news</p>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="#" class="btn btn-primary">Find Out More</a> 
+                            <!-- <a href="#" class="btn btn-default">More Info</a> -->
                         </p>
                     </div>
                 </div>
@@ -105,10 +109,11 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>Community Resources</h3>
+                        <p>Start here for reference information</p>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="#" class="btn btn-primary">Find Out More</a> 
+                            <!-- <a href="#" class="btn btn-default">More Info</a> -->
                         </p>
                     </div>
                 </div>
@@ -118,10 +123,11 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>Upcoming Events</h3>
+                        <p>Want to know when the next HOA meeting is?</p>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="#" class="btn btn-primary">Find Out More</a> 
+                            <!-- <a href="#" class="btn btn-default">More Info</a> -->
                         </p>
                     </div>
                 </div>
@@ -131,10 +137,11 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>Stay In Touch With Us</h3>
+                        <p>Useful contact emails and phone numbers</p>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="#" class="btn btn-primary">Find Out More</a> 
+                            <!-- <a href="#" class="btn btn-default">More Info</a> -->
                         </p>
                     </div>
                 </div>
