--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
 
     <!-- Bootstrap Core CSS -->
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/heroic-features.css" rel="stylesheet">
-    <link href="css/jwd-styles.css" rel="stylesheet">
+    <link href="assets/css/heroic-features.css" rel="stylesheet">
+    <link href="assets/css/jwd-styles.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -41,15 +41,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="www.stratfordpark.org">
-                    <img alt="Stratford Park" src="images/brand-logo.png">
+                <a class="navbar-brand" href="http://www.stratfordpark.org">
+                    <img alt="Stratford Park" src="assets/images/brand-logo.png">
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">News &amp Announcements</a>
+                        <a href="posts.html">News &amp Announcements</a>
                     </li>
                     <li>
                         <a href="#">Community Resources</a>
@@ -78,12 +78,13 @@
             </p>
         </header>
 
-        <hr>
+        <!-- <hr> -->
 
         <!-- Title -->
         <div class="row">
             <div class="col-lg-12">
-                <h3>Latest Features</h3>
+                <h1>Around The Block</h1>
+                <hr>
             </div>
         </div>
         <!-- /.row -->
@@ -95,7 +96,7 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>News &amp Announcements</h3>
+                        <h3>News &amp <br>Announcements</h3>
                         <p>Stay up to date with the latest news</p>
                         <p>
                             <a href="#" class="btn btn-primary">Find Out More</a> 
@@ -109,7 +110,7 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Community Resources</h3>
+                        <h3>Community <br>Resources</h3>
                         <p>Start here for reference information</p>
                         <p>
                             <a href="#" class="btn btn-primary">Find Out More</a> 
@@ -123,8 +124,8 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Upcoming Events</h3>
-                        <p>Want to know when the next HOA meeting is?</p>
+                        <h3>Upcoming <br>Events</h3>
+                        <p>Join us for the next HOA meeting</p>
                         <p>
                             <a href="#" class="btn btn-primary">Find Out More</a> 
                             <!-- <a href="#" class="btn btn-default">More Info</a> -->
@@ -137,8 +138,8 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Stay In Touch With Us</h3>
-                        <p>Useful contact emails and phone numbers</p>
+                        <h3>Stay In Touch <br>With Us</h3>
+                        <p>Contact emails and phone numbers</p>
                         <p>
                             <a href="#" class="btn btn-primary">Find Out More</a> 
                             <!-- <a href="#" class="btn btn-default">More Info</a> -->
@@ -165,10 +166,10 @@
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="assets/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 
 </body>
 
